fix display problem when content of modal is overflow

--- a/ui/src/assets/styles/global.scss
+++ b/ui/src/assets/styles/global.scss
@@ -64,6 +64,7 @@ body {
         max-width: 100%;
         max-height: 100%;
         overflow: initial;
+        overflow-y: scroll;
     }
 }
 // 覆盖页面选择页样式
